Add Memoria PHVA Vectorizada to portfolio with SEO optimization.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="es">
 
 <head>
@@ -7,7 +7,7 @@
   <meta name="description"
     content="Portafolio de Javier Gómez Martínez — Ingeniero Industrial con 10+ años de experiencia en Oil & Gas, Energía e IA Agéntica. Especialista en Confiabilidad y Analítica Operativa." />
   <meta name="keywords"
-    content="Javier Gómez Martínez, Ingeniero Industrial, Oil and Gas, Colombia, IA Agéntica, Antigravity, Eficiencia Energética, Confiabilidad Operacional, Data Analytics, Power BI, Python, VBA, ISO 50001, ISO 14224" />
+    content="Javier Gómez Martínez, Ingeniero Industrial, Oil and Gas, Colombia, IA Agéntica, Antigravity, Eficiencia Energética, Confiabilidad Operacional, Data Analytics, Power BI, Python, VBA, ISO 50001, ISO 14224, AI Resilience, Vector Memory, Aprendizaje Persistente" />
   <title>Javier Gómez Martínez | Ingeniero Industrial & Especialista en IA Agéntica</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -139,6 +139,28 @@
           </div>
         </article>
 
+        <!-- Case 07: PHVA Vectorizado -->
+        <article class="card" data-tilt>
+          <div class="card__shine"></div>
+          <div class="card__body">
+            <p class="mono case-label">CASE 07</p>
+            <h3>Memoria PHVA Vectorizada &mdash; Framework de Resiliencia</h3>
+            <p class="dim">
+              <strong>Ingeniería de Memoria Persistente.</strong> Diseño de una arquitectura de aprendizaje continuo para agentes de IA que integra el ciclo PDCA con almacenamiento vectorial. Elimina la reincidencia de errores mediante la retrospectiva asíncrona y la inyección proactiva de conocimiento destilado. Optimización avanzada de Gold-Standard tokens.
+            </p>
+            <div class="tech-tags">
+              <span class="tech">AI Resilience</span>
+              <span class="tech">Vector Memory</span>
+              <span class="tech">PDCA</span>
+              <span class="tech">Skill Design</span>
+            </div>
+            <div class="card__actions">
+              <a class="btn btn--small btn--ghost" href="https://github.com/ingjaviergomezm/phva-vectorizado" target="_blank"
+                rel="noopener noreferrer">Ver Manifiesto</a>
+            </div>
+          </div>
+        </article>
+
         <!-- Case 06: Axiona -->
         <article class="card" data-tilt>
           <div class="card__shine"></div>
@@ -149,8 +171,7 @@
               <strong>Gestión de Productividad Inteligente.</strong> Aplicación Front-End interactiva (React + Tailwind
               v4) que orquesta tres metodologías probadas (Eisenhower, Kanban, Pomodoro) potenciadas por <strong>Gemini
                 AI</strong> para el desglose automático de tareas y coaching operativo analítico. Demuestra arquitectura
-              de UI/UX modernos y consumo eficiente de APIs de IA.
-            </p>
+              de UI/UX modernos y consumo eficiente de APIs de IA.\r\n            </p>
             <div class="tech-tags">
               <span class="tech">React</span>
               <span class="tech">Tailwind v4</span>
@@ -286,6 +307,8 @@
         <span class="pill pill--accent">IA Agéntica</span>
         <span class="pill pill--accent">Antigravity</span>
         <span class="pill pill--accent">Gemini API</span>
+        <span class="pill pill--accent">AI Resilience</span>
+        <span class="pill pill--accent">Persistent Memory</span>
       </div>
     </section>
 
@@ -301,6 +324,13 @@
             <h3>IA Agéntica — El Camello</h3>
             <p class="dim">16 Skills con orquestación multi-agente y demo interactiva. <a
                 href="https://ingjaviergomezm.github.io/el-camello/" target="_blank">Ver demo →</a></p>
+          </div>
+        </div>
+        <div class="tl__item tl__item--done">
+          <div class="tl__badge">✓</div>
+          <div class="tl__content">
+            <h3>Memoria PHVA Vectorizada</h3>
+            <p class="dim">Framework de resiliencia y aprendizaje continuo para agentes LLM.</p>
           </div>
         </div>
         <div class="tl__item">
